compiler/acton/test/syntaxerrors/err12.act
# Invalid character in identifier
def my-function(x):
    return x + 1